<!--
  ~ /*
  ~  * Copyright 2020 Cristian Menárguez González
  ~  *
  ~  * Licensed under the Apache License, Version 2.0 (the "License");
  ~  * you may not use this file except in compliance with the License.
  ~  * You may obtain a copy of the License at
  ~  *
  ~  *    http://www.apache.org/licenses/LICENSE-2.0
  ~  *
  ~  * Unless required by applicable law or agreed to in writing, software
  ~  * distributed under the License is distributed on an "AS IS" BASIS,
  ~  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  * See the License for the specific language governing permissions and
  ~  * limitations under the License.
  ~  */
  ~
  -->

<resources>
    <string name="app_name">Worker</string>

    <string name="action_refresh">Refresh</string>

    <string name="failure_network_connection">No Network Connection.</string>
    <string name="failure_server_error">Server Error</string>
    <string name="failure_movies_list_unavailable">Movies Unavailable.</string>
    <string name="failure_movie_non_existent">Movie Not Existent.</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="bt_login_text">Login</string>
    <string name="product_supplier">Reponedor de productos</string>
    <string name="replenish_supplier">Reponer productos</string>
    <string name="collector">Cobrar</string>
    <string name="wrapper">Envolver</string>
    <string name="validation_error_message_login">Please input the credentials properly</string>
    <string name="user_not_found">User not found</string>
    <string name="login_successful">Login successful</string>
    <string name="description_task">Descripción tarea</string>
    <string name="add_task">Nueva tarea</string>
    <string name="duration">Duración</string>
    <string name="type_task">Tarea</string>
    <string name="minutes">Minutes</string>
    <string name="hours">Hours</string>
    <string name="add_new_task">Añadir nueva tarea</string>
    <string name="select_type_task_to_select">Selecciona el tipo de tarea para asignar</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="the_time_is_required">The time is required</string>
    <string name="type_task_is_required">Por favor seleccione una tarea</string>
    <string name="new_task">Tarea nueva</string>
    <string name="new_task_was_added">Una nueva tarea fue añadida al usuario %1$s</string>
    <string name="new_task_again">Crear otra tarea</string>
    <string name="close_session">Cerrar sesion</string>
    <string name="the_task_cannot_be_assign_to_user">No hay un tecnico disponible</string>
    <string name="unknown_error">Error desconocido</string>
    <string name="the_user_doesnt_have_task">El usuario no tienen tareas </string>
    <string name="content_description">content description</string>
    <string name="complete">Completada</string>
    <string name="to_complete">Completar</string>
    <string name="task_list">Lista de tareas</string>
    <string name="category">Categoria:</string>
    <string name="item">Producto:</string>
    <string name="zip_code">Codigo postal:</string>
    <string name="phone">Teléfono</string>
    <string name="farms">Granjas</string>
</resources>
